# inconnu

./: .gitignore  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  examples.ipynb  playground.ipynb  pyproject.toml
.bitbucket/scripts/: auto_fix.py  post_scan.py  post_setup_comment.py
.github/workflows/: publish.yml
corgea_issues/: 24809ee1-7b41-4352-b33a-4c2c0fe20fcd.json  2c0dce32-eccf-4814-96c5-57a51e8ca100.json  30e62d9b-c779-4894-b662-cc4f3e15a932.json  9f27a2ca-cd59-4aba-9849-eb8e9688b4fe.json  a8806fad-6732-4d74-8d18-87788444e9a9.json  ede26091-c437-4008-90a6-e9683f6a4b9f.json
examples/: 01_healthcare_records.py  02_legal_documents.py  03_hr_employment.py  04_financial_services.py  05_customer_support.py  06_education_data.py  07_research_surveys.py  08_multilingual.py  09_batch_processing.py  10_custom_entities.py  README.md
inconnu/: __init__.py  config.py  interfaces.py  main.py  model_installer.py
inconnu/nlp/: anonymizer.py  entity_redactor.py  interfaces.py  patterns.py  pseudonymizer.py  utils.py  validators.py
tests/: conftest.py  test_entity_conflicts.py  test_entity_redactor.py  test_improvements.py  test_inconnu.py  test_inconnu_anonymizer.py  test_inconnu_pseudonymizer.py  test_inconnu_v2.py  test_interfaces.py  test_newline_preservation.py  test_nlp_pipe_performance.py  test_patterns.py  test_performance.py  test_restore.py
