[project]
name = "inconnu"
version = "0.1.0"
description = "Entity redaction and deanonymization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "phonenumbers>=9.0.8",
    "spacy>=3.8.7",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.1",
]

[tool.ruff.lint]
extend-select = ["I", "S"] # I: isort, S: bandit
select = ["E4", "E7", "E9", "F"]
ignore = ["S101"] # assert

[build-system]
requires = ["uv_build>=0.7.15,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "inconnu"
module-root = ""